--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.star-button {
+    background-color: gray; /* Star color */
+    color: white; /* Text color */
+    border: none;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: background-color 0.3s;
+    clip-path: polygon(50% 0%, 61.8% 38.2%, 100% 44.3%, 72.7% 72.7%, 80.1% 100%, 50% 81.3%, 19.9% 100%, 27.3% 72.7%, 0% 44.3%, 38.2% 38.2%);
+    justify-self: center;
+  }
+
+  .star-button:hover {
+  background-color: #ffcc29; /* Change color on hover */
+    }
+
+
+    .star-clicked {
+        background-color: #FAED27 !important; /* Star color */
+    }
+
+    .star-unclicked {
+        background-color: gray !important; /* Star color */
+    }
